feat: menambahkan validasi ketika login dan registrasi lalu membuat endpoint activation code untuk aktivasi akun
